fix: navbar, content, and footer now align correctly

--- a/src/assets/scss/variables/_variables-components.scss
+++ b/src/assets/scss/variables/_variables-components.scss
@@ -22,7 +22,6 @@
 
   flex: none;
   order: 0;
-  align-self: stretch;
   flex-grow: 0;
 }
 #nav-collapse {
